Issue #135 : Fixed integration failures.